add ajax loader (needs some serious refactoring)

--- a/src/browser_action/tracked_products.html
+++ b/src/browser_action/tracked_products.html
@@ -51,6 +51,7 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<script src="../backend/api.js"></script>
 <script src="browser_action.js"></script>
 
 </body>
