--- a/src/browser_action/tracked_products.html
+++ b/src/browser_action/tracked_products.html
@@ -9,6 +9,8 @@
 	<title>Tracked products</title>
 	<!-- Bootstrap Core CSS -->
 	<link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Morris Charts CSS -->
+	<link href="../../bower_components/morris.js/morris.css" rel="stylesheet">
 	<!-- Custom CSS -->
 	<link href="styles.css" rel="stylesheet">
 </head>
@@ -28,18 +30,7 @@
 	<!-- /#sidebar-wrapper -->
 
 	<!-- Page Content -->
-	<div id="page-content-wrapper">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-12">
-					<h1>Simple Sidebar</h1>
-					<p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-					<p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-					<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div id="page-content-wrapper" class="container-fluid"></div>
 	<!-- /#page-content-wrapper -->
 
 </div>
@@ -50,6 +41,10 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<!-- Morris Charts JavaScript -->
+<script src="../../bower_components/raphael/raphael.min.js"></script>
+<script src="../../bower_components/morris.js/morris.min.js"></script>
 
 <script src="../backend/api.js"></script>
 <script src="browser_action.js"></script>
