--- a/src/background/background.html
+++ b/src/background/background.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="../../bower_components/moment/min/moment.min.js"></script>
+  <script type="text/javascript" src="../backend/api.js"></script>
+  <script type="text/javascript" src="../utils/scanner.js"></script>
+  <script type="text/javascript" src="../tasks/checker.js"></script>
   <script type="text/javascript" src="background.js"></script>
 </head>
 </html>
