refactoring & basic templating (needs automation)

--- a/src/browser_action/index.html
+++ b/src/browser_action/index.html
@@ -46,8 +46,12 @@
 <script src="../../bower_components/raphael/raphael.min.js"></script>
 <script src="../../bower_components/morris.js/morris.min.js"></script>
 
+<!-- Mustache Templating -->
+<script src="../../bower_components/mustache.js/mustache.min.js"></script>
+
 <script src="../backend/api.js"></script>
-<script src="browser_action.js"></script>
+<script src="../utils/templateLoader.js"></script>
+<script src="main.js"></script>
 
 </body>
 
