--- a/src/background/index.html
+++ b/src/background/index.html
@@ -6,6 +6,6 @@
   <script type="text/javascript" src="../backend/api.js"></script>
   <script type="text/javascript" src="../utils/scanner.js"></script>
   <script type="text/javascript" src="../tasks/checker.js"></script>
-  <script type="text/javascript" src="background.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </head>
 </html>
