--- a/src/browser_action/index.html
+++ b/src/browser_action/index.html
@@ -1,58 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Tracked products</title>
-	<!-- Bootstrap Core CSS -->
-	<link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-	<!-- Morris Charts CSS -->
-	<link href="../../bower_components/morris.js/morris.css" rel="stylesheet">
-	<!-- Custom CSS -->
-	<link href="styles.css" rel="stylesheet">
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Tracked products</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-<div id="wrapper">
-	<!-- Sidebar -->
-	<div id="sidebar-wrapper">
-		<ul class="sidebar-nav">
-			<li class="sidebar-brand">
-				<input type="search" class="form-control" placeholder="Search products...">
-				<span class="glyphicon glyphicon-search"></span>
-			</li>
-			<div id="products">
-			</div>
-		</ul>
-	</div>
-	<!-- /#sidebar-wrapper -->
-
-	<!-- Page Content -->
-	<div id="page-content-wrapper" class="container-fluid"></div>
-	<!-- /#page-content-wrapper -->
-
-</div>
-<!-- /#wrapper -->
-
-<!-- jQuery -->
-<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-<!-- Morris Charts JavaScript -->
-<script src="../../bower_components/raphael/raphael.min.js"></script>
-<script src="../../bower_components/morris.js/morris.min.js"></script>
-
-<!-- Mustache Templating -->
-<script src="../../bower_components/mustache.js/mustache.min.js"></script>
-
-<script src="../backend/api.js"></script>
-<script src="../utils/templateLoader.js"></script>
-<script src="main.js"></script>
-
+    <div id="app"></div>
+    <script src="dist/build.js"></script>
 </body>
-
 </html>
