reorganize project for use with webpack

--- a/src/background/index.html
+++ b/src/background/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="../../bower_components/moment/min/moment.min.js"></script>
-  <script type="text/javascript" src="../backend/api.js"></script>
-  <script type="text/javascript" src="../utils/scanner.js"></script>
-  <script type="text/javascript" src="../tasks/checker.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="dist/build.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </head>
 </html>
