--- a/src/browser_action/pages/Product/template.html
+++ b/src/browser_action/pages/Product/template.html
@@ -26,7 +26,7 @@
     <div class="well well-lg">
         <div class="row">
             <div class="col-lg-12 chart-container">
-                <emag-chart>{{update}}</emag-chart>
+                <emag-chart>{{selected.history}}</emag-chart>
             </div>
         </div>
     </div>
@@ -34,20 +34,10 @@
         <div class="row">
             <div class="col-lg-1"></div>
             <div class="col-lg-5">
-                <div id="from" class="input-group date">
-                    <input type="text" class="form-control" placeholder="From" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
+                <datepicker title="From" @datepicker-selected="updateFrom" :bounds="bounds" property="selectedFrom"></datepicker>
             </div>
             <div class="col-lg-5">
-                <div id="until" class="input-group date">
-                    <input type="text" class="form-control" placeholder="Until" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
+                <datepicker title="Until" @datepicker-selected="updateUntil" :bounds="bounds" property="selectedUntil"></datepicker>
             </div>
         </div>
     </div>
