--- a/src/browser_action/pages/Product/template.html
+++ b/src/browser_action/pages/Product/template.html
@@ -14,10 +14,10 @@
                 <a class="btn btn-default" :href="selected.url">
                     <i class="glyphicon glyphicon-home"></i> View on emag
                 </a>
-                <button type="submit" class="btn btn-default">
+                <button type="button" class="btn btn-default" @click="remove">
                     <i class="glyphicon glyphicon-remove-sign"></i> Remove from tracked list
                 </button>
-                <button type="submit" class="btn btn-danger">
+                <button type="button" class="btn btn-danger" @click="report">
                     <i class="glyphicon glyphicon-exclamation-sign"></i> Report
                 </button>
             </div>
