changes: - rewrite checker async flow with co - add notifications - bugfixing on-click scan - modify data model for product - further refactoring

--- a/src/browser_action/pages/Product/template.html
+++ b/src/browser_action/pages/Product/template.html
@@ -1,7 +1,7 @@
 <div id="product" class="container-fluid">
     <div class="row">
         <div class="col-lg-2">
-            <img :src="selected.productImageUrl" :alt="selected.title" width="150" height="150">
+            <img :src="selected.imgUrl" :alt="selected.title" width="150" height="150">
         </div>
         <div class="col-lg-10">
             <h1>{{ selected.title }}</h1>
