--- a/src/browser_action/pages/Settings/template.html
+++ b/src/browser_action/pages/Settings/template.html
@@ -16,12 +16,12 @@
     <div class="well well-sm">
         <div class="row">
             <div class="col-sm-offset-4 col-sm-2">
-                <button type="button" class="btn btn-success" >
+                <button type="button" class="btn btn-success" @click="save">
                     <i class="glyphicon glyphicon-floppy-save"></i> Save
                 </button>
             </div>
             <div class="col-sm-2">
-                <button type="button" class="btn btn-danger">
+                <button type="button" class="btn btn-danger" @click="reset">
                     <i class="glyphicon glyphicon-floppy-remove"></i> Reset
                 </button>
             </div>
