--- a/src/browser_action/pages/Settings/General/template.html
+++ b/src/browser_action/pages/Settings/General/template.html
@@ -4,7 +4,7 @@
             <label>Online data</label>
         </div>
         <div class="col-lg-2">
-            <input type="checkbox">
+            <input type="checkbox" v-model="settings.general.onlineData">
         </div>
     </div>
     <div class="row">
@@ -12,7 +12,8 @@
             <label>Language</label>
         </div>
         <div class="col-lg-2">
-            <input type="text" value="TODO replace with dropdown component">
+            <dropdown title="Language" :value="settings.general.language" :options="languages"
+                      @dropdown-selected="updateLanguage"></dropdown>
         </div>
     </div>
 </div>
