--- a/src/browser_action/pages/Settings/General/template.html
+++ b/src/browser_action/pages/Settings/General/template.html
@@ -6,6 +6,11 @@
         <div class="col-lg-2">
             <toggle :value="settings.general.onlineData" @toggle-changed="updateOnlineData"></toggle>
         </div>
+        <div class="col-lg-2">
+            <a data-toggle="tooltip" class="tooltipLink" data-placement="right" title="Bla bla bla TODO">
+                <span class="glyphicon glyphicon-info-sign"></span>
+            </a>
+        </div>
     </div>
     <div class="row">
         <div class="col-lg-2">
