--- a/src/browser_action/pages/Home/template.html
+++ b/src/browser_action/pages/Home/template.html
@@ -1,8 +1,49 @@
 <div class="row">
+    <div class="header col-lg-12">
+        <img :src="icon">
+        <h1>{{title}}</h1>
+    </div>
     <div class="col-lg-12">
-        <h1>Simple Sidebar</h1>
-        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+        <dl>
+            <dt>{{aboutTitle}}</dt>
+            <dd>{{aboutDescription}}</dd>
+        </dl>
+    </div>
+    <div class="col-lg-12">
+        <dl class="dl-horizontal">
+            <dt>{{how}}</dt>
+            <dd>{{howText}}</dd>
+        </dl>
+    </div>
+    <div class="col-lg-12">
+        <dl class="dl-horizontal">
+            <dt>{{userActions}}</dt>
+            <dd>{{userActionsText}}</dd>
+        </dl>
+    </div>
+    <div class="col-lg-12">
+        <dl class="dl-horizontal">
+            <dt>{{settings}}</dt>
+            <dd>{{settingsText}}
+                <ul class="list-unstyled">
+                    <li>
+                        <ul>
+                            <li>{{settingsOnlineData}}</li>
+                            <li>{{settingsLanguage}}</li>
+                            <li>{{settingsAllowNotifications}}</li>
+                            <li>{{settingsPriceVariation}}</li>
+                            <li>{{settingsTimeout}}</li>
+                            <li>{{settingsScanNow}}</li>
+                        </ul>
+                    </li>
+                </ul>
+            </dd>
+        </dl>
+    </div>
+    <div class="col-lg-12">
+        <dl class="dl-horizontal">
+            <dt>{{otherInfo}}</dt>
+            <dd>{{otherInfoText}}</dd>
+        </dl>
     </div>
 </div>
